@@ -352,7 +352,7 @@ void CAnomalyJobLimitTest::testModelledEntityCountForFixedMemoryLimit() {
         std::size_t s_ExpectedByLowerMemoryLimit;
         std::size_t s_ExpectedPartitionLowerMemoryLimit;
         std::size_t s_ExpectedOverLowerMemoryLimit;
-    } testParams[] = {{600, 550, 6000, 300, 33, 40, 40},
+    } testParams[] = {{600, 550, 6000, 300, 33, 35, 40},
                       {3600, 550, 5500, 300, 28, 25, 20},
                       {172800, 150, 850, 120, 6, 6, 3}};
 
